--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port = 8083
 spring.application.name = Product Service
 
 #Connection
-spring.datasource.url = jdbc:mysql://localhost:3306/swissquote?useSSL=false&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://localhost:3306/gproject?useSSL=false&serverTimezone=UTC
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 # Username and password
 spring.datasource.username = root
